--- a/Ajax跨域处理/降域/b.html
+++ b/Ajax跨域处理/降域/b.html
@@ -27,7 +27,7 @@
     <body>
     	<div class="ct">
     		<div class="main">
-    			<input type="text" placeholder="http://b.jrg.org:8080/b.html" class="input_2">
+    			<input type="text" placeholder="http://b.home.org:8080/b.html" class="input_2">
     			<div class="bgc_1"></div>
     		</div>
     	</div>
