--- a/Ajax跨域处理/postMessage/b.html
+++ b/Ajax跨域处理/postMessage/b.html
@@ -27,7 +27,7 @@
     <body>
     	<div class="ct">
     		<div class="main">
-    			<input type="text" placeholder="http://b.jrg.com:8080/b.html">
+    			<input type="text" placeholder="http://b.home.com:8080/b.html">
     			<div class="bgc_1"></div>
     		</div>
     	</div>
