--- a/JQuery/Barrels/index.html
+++ b/JQuery/Barrels/index.html
@@ -22,15 +22,15 @@
 			.img-box {
 				float: left;
 			}
-        </style>
-        <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        </style> 
+        <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     </head>
     <body>
-    	<div class="img-preview">
+    	<!-- <div class="img-preview">
     		<div class="img-row">
     			<div class="img-box"></div>
     		</div>
-    	</div>
+    	</div> -->
     </body>
     <script type="text/javascript">
     	function Barrels($parentEle,num){
