--- a/JQuery/WaterfallsFlow/index.html
+++ b/JQuery/WaterfallsFlow/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
         <style type="text/css">
 			html, body, ul, li, ol, dl, dd, dt, form, fieldset, legend, img {
 			    margin: 0;
