--- a/JQuery/WaterfallsFlow_2/index.html
+++ b/JQuery/WaterfallsFlow_2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="index.css">
-        <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     </head>
     <body>
     	<div class="content clearfix">
