--- a/JQuery/Barrels/index.html
+++ b/JQuery/Barrels/index.html
@@ -23,7 +23,12 @@
 				float: left;
 			}
         </style>
-        <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+        <!-- <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
+        <script
+          src="https://code.jquery.com/jquery-2.2.4.min.js"
+          integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+          crossorigin="anonymous">
+        </script> 
     </head>
     <body>
     	<div class="img-preview">
