--- a/JQuery/WaterfallsFlow/index.html
+++ b/JQuery/WaterfallsFlow/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+        <!-- <script type="text/javascript" src="jquery-1.11.1.min.js"></script> -->
+        <script
+		  src="https://code.jquery.com/jquery-2.2.4.min.js"
+		  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+		  crossorigin="anonymous">
+		</script> 
         <style type="text/css">
 			html, body, ul, li, ol, dl, dd, dt, form, fieldset, legend, img {
 			    margin: 0;
