--- a/JQuery/WaterfallsFlow_2/index.html
+++ b/JQuery/WaterfallsFlow_2/index.html
@@ -75,7 +75,7 @@
     		function reqConten(callback){
     			
     			$.ajax({
-    				url: 'http://platform.sina.com.cn/slide/album_tech',
+    				url: 'https://platform.sina.com.cn/slide/album_tech',
     				dataType: 'jsonp',
     				jsonp: 'jsoncallback',
     				data: {
