完成音乐详情页CSS部分，编写JS部分

--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -32,6 +32,30 @@
                 <div class="audio-btn"></div>
             </div>
         </div>
+        <div id="musicdetails">
+            <div class="details-title">
+                <div class="details-name">逆战<span>张杰</span></div>
+                <span class="detaols-tip"></span>
+            </div>
+            <div class="details-lyric"></div>
+            <div class="details-audio">
+                <div class="details-audioAll">
+                    <div class="details-audioPro">
+                        <div class="details-audioProUp"></div>
+                        <div class="details-audioProBar"></div>
+                    </div>
+                    <div class="details-nowTime">00:00</div>
+                    <div class="details-allTime">00:00</div>
+                    <div class="details-play"></div>
+                    <div class="details-prev"></div>
+                    <div class="details-next"></div>
+                </div>
+                <ul class="details-btn">
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>   
     </div>
     <script src="./src/js/index.js"></script>
 </body>
