--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div id="main">
+
+        <!--音乐播放列表-->
         <div id="music-list">
             <div class="music-title">
                 音乐播放器
@@ -32,6 +34,8 @@
                 <div class="audio-btn"></div>
             </div>
         </div>
+
+        <!--音乐详情页-->
         <div id="musicdetails">
             <div class="details-title">
                 <div class="details-name">逆战<span>张杰</span></div>
@@ -41,11 +45,11 @@
             <div class="details-audio">
                 <div class="details-audioAll">
                     <div class="details-audioPro">
-                        <div class="details-audioProUp"></div>
-                        <div class="details-audioProBar"></div>
+                        <div id='detailsAudioProUp' class="details-audioProUp"></div>
+                        <div id='detailsAudioProBar' class="details-audioProBar"></div>
                     </div>
-                    <div class="details-nowTime">00:00</div>
-                    <div class="details-allTime">00:00</div>
+                    <div id='detailsNowTime' class="details-nowTime">00:00</div>
+                    <div id='detailsAllTime' class="details-allTime">00:00</div>
                     <div class="details-play"></div>
                     <div class="details-prev"></div>
                     <div class="details-next"></div>
@@ -55,7 +59,8 @@
                     <li></li>
                 </ul>
             </div>
-        </div>   
+        </div>
+        <audio id="loadAudio"></audio>   
     </div>
     <script src="./src/js/index.js"></script>
 </body>
