播放歌曲相应动作完毕

--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -51,8 +51,8 @@
                     <div id='detailsNowTime' class="details-nowTime">00:00</div>
                     <div id='detailsAllTime' class="details-allTime">00:00</div>
                     <div class="details-play"></div>
-                    <div class="details-prev"></div>
-                    <div class="details-next"></div>
+                    <div id='detailsPrev' class="details-prev"></div>
+                    <div id='detailsNext' class="details-next"></div>
                 </div>
                 <ul class="details-btn">
                     <li class="active"></li>
