歌词滚动完结

--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -41,7 +41,14 @@
                 <div class="details-name">逆战<span>张杰</span></div>
                 <span class="detaols-tip"></span>
             </div>
-            <div class="details-lyric"></div>
+            <div class="details-lyric">
+                <ul id='detailsLyricUl' class='details-lyric-ul'>
+                    <!--<li>测试歌词</li>
+                    <li>测试歌词</li>
+                    <li>测试歌词</li>
+                    <li>测试歌词</li>-->
+                </ul>
+            </div>
             <div class="details-audio">
                 <div class="details-audioAll">
                     <div class="details-audioPro">
