制作留言板块

--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -66,6 +66,15 @@
                     <li></li>
                 </ul>
             </div>
+            <div id="detailsMessage" class="details-message">
+                    <textarea id="detailsMessageTextarea" placeholder="文明上网，理性留言"></textarea>
+                    <input id="detailsMessageBtn" type="button" value="发表">
+                    <ul id="detailsMessageUl">
+                        <!--<li>留言测试</li>
+                        <li>留言测试</li>
+                        <li>留言测试</li>-->
+                    </ul>
+            </div>
         </div>
         <audio id="loadAudio"></audio>   
     </div>
