音乐播放器完毕

--- a/musicPlayer/index.html
+++ b/musicPlayer/index.html
@@ -10,6 +10,21 @@
 </head>
 <body>
     <div id="main">
+        <!--加载效果-->
+        <div id="loading">
+            <div class="content1">
+                <div class="round1"></div>
+                <div class="round2"></div>
+                <div class="round3"></div>
+                <div class="round4"></div>
+            </div>
+            <div class="content2">
+                <div class="round1"></div>
+                <div class="round2"></div>
+                <div class="round3"></div>
+                <div class="round4"></div>
+            </div>
+        </div>
 
         <!--音乐播放列表-->
         <div id="music-list">
