--- a/ES6/index.html
+++ b/ES6/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <script src="./dist/index.js"></script>
+    <!--
 
     /**
     *   声明
@@ -30,6 +31,14 @@
     *       字符结构
     */
 
+    /**
+    *   对象扩展运算符和rest运算符的应用
+    */
+
+    /**
+    *   字符串模板
+    */
     
+    -->
 </body>
 </html>
