--- a/ES6/index.html
+++ b/ES6/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
         }
     </style>
 </head>
+
 <body>
     <script src="./dist/index.js"></script>
     <!--
@@ -46,6 +48,43 @@
     /**
     *   数字的判断与扩展
     */
+
+    /**
+    *   Math对象
+    */
+
+    /**
+    *   数组的实例应用
+    */
+
+    /**
+    *   函数与数组遍历
+    */
+
+    /**
+    *   对象
+    */
+
+    /**
+    *   symbol
+    */
+
+    /**
+    *   set、Weakset
+    */
+
+    /**
+    *   proxy
+    */
+
+    /**
+    * promise
+    */
+
+    /**
+    * class语法糖
+    */
     -->
 </body>
+
 </html>
