--- a/Sass-Exercise/index.html
+++ b/Sass-Exercise/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div>
-        我是红色
-    </div>
+    <div class="alert alter-success">Success</div>
+    <div class="alert alter-info">Info</div>
+    <div class="alert alter-warning">Warning</div>
+    <div class="alert alter-danger">Danger</div>
 </body>
 </html>
