--- a/vue/vue_test/14_vue组件_modal.html
+++ b/vue/vue_test/14_vue组件_modal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,39 +10,48 @@
     <style>
         #modal {
             width: 502px;
-            height: 173px;
-            border: 1px solid rgba(0,0,0,.2);
+            /* height: 173px; */
+            border: 1px solid rgba(0, 0, 0, .2);
             border-radius: 5px;
-            box-shadow: 0 3px 9px rgba(0,0,0,.5)
+            box-shadow: 0 3px 9px rgba(0, 0, 0, .5)
         }
+
         #modal .modal-header {
             padding: 10px;
-            border-bottom: 1px solid rgba(0,0,0,.2);
+            border-bottom: 1px solid rgba(0, 0, 0, .2);
         }
+
         #modal h4 {
             margin: 0;
         }
+
         #modal .modal-content {
             padding: 10px;
-            border-bottom:  1px solid rgba(0,0,0,.2);
+            border-bottom: 1px solid rgba(0, 0, 0, .2);
         }
+
         #modal .modal-foot {
             padding: 16px 15px;
         }
+
         #modal .modal-foot:after {
             content: '';
             display: block;
             clear: both;
         }
+
         #modal .modal-button {
             float: right;
         }
+
         #modal span {
             display: inline-block;
             padding: 3px 15px;
-            background-color: rgba(125,125,125,0.4);
+            background-color: rgba(125, 125, 125, 0.4);
             font-size: 14px;
+            cursor: pointer;
         }
+
         #modal .confirm {
             margin-right: 5px;
             background-color: #39f;
@@ -49,20 +59,69 @@
         }
     </style>
 </head>
+
 <body>
-    <div id="modal">
-        <div class="modal-header">
-            <h4>提醒</h4>
-        </div>
-        <div class="modal-content">
-            <p>在这里添加内容</p>
-        </div>
-        <div class="modal-foot">
-            <div class="modal-button">
-                <span class="confirm">确认</span>
-                <span class="cancel">取消</span>
-            </div>
-        </div>
+    <div id="main">
+        <m-modal :m-title='title'  @on-ok="ok" @on-cancel="cancel">
+            <template slot="modal-content">
+                <p>在这里添加内容-1</p>
+                <p>在这里添加内容-2</p>
+                <p>在这里添加内容-3</p>
+            </template>
+        </m-modal>
     </div>
+
+    <script>
+        Vue.component('m-modal', {
+            props: {
+                mTitle: {
+                    type: String,
+                    default: '我是modalTile'
+                }
+            },
+            template: `
+                <div id="modal">
+                    <div class="modal-header">
+                        <h4>{{ mTitle }}</h4>
+                    </div>
+                    <div class="modal-content">
+                        <slot name='modal-content'></slot>
+                    </div>
+                    <div class="modal-foot">
+                        <div class="modal-button">
+                            <slot name="modal-foot">
+                                <span class="confirm" @click="okHandle">确认</span>
+                                <span class="cancel" @click="cancelHandle">取消</span>
+                            </slot>   
+                        </div>
+                    </div>
+                </div>
+            `,
+            methods: {
+                okHandle(){
+                    this.$emit('on-ok');
+                },
+                cancelHandle(){
+                    this.$emit('on-cancel')
+                }
+            }
+        })
+
+        new Vue({
+            el: '#main',
+            data: {
+                title: '提醒'
+            },
+            methods: {
+                ok(){
+                    alert('改变了modal样式')
+                },
+                cancel(){
+                    alert('取消了，干别的事')
+                }
+            }
+        })
+    </script>
 </body>
+
 </html>
