--- a/vue/Vue_Advanced_learning/vue-lifecyclehook/index.html
+++ b/vue/Vue_Advanced_learning/vue-lifecyclehook/index.html
@@ -7,8 +7,8 @@
   <body>
     <div id="app">
 			<ul>
-				<li v-for="(item,index) in imgs" :key="index" v-if="imgs&&imgs.length">
-					<img :src="item.image" alt="">
+				<li class="abc" v-for="(item,index) in imgs" :key="index" v-if="imgs&&imgs.length">
+					<!-- <img :src="item.image" alt=""> -->{{ item }}
 				</li>
 			</ul>
 		</div>
