--- a/移动端布局/randNum.html
+++ b/移动端布局/randNum.html
@@ -36,14 +36,13 @@
 
 		#numBut {
 			background-color: #fff;
-			height: 0.925rem;
 			padding: 0.2rem;
 			margin-right: 0.25rem;
 			border: 1px solid #ccc;
 			border-radius: 0.125rem;
 			box-shadow: 1px 2px 8px rgba(0, 0, 0, .2), 4px 4px 12px rgba(0, 0, 0, .1);
 			outline: none;
-			font-size: 16px;
+			font-size: 1em;
 			vertical-align: middle;
 		}
 
