--- a/移动端布局/randNum.html
+++ b/移动端布局/randNum.html
@@ -42,7 +42,7 @@
 			border-radius: 0.125rem;
 			box-shadow: 1px 2px 8px rgba(0, 0, 0, .2), 4px 4px 12px rgba(0, 0, 0, .1);
 			outline: none;
-			font-size: 0.5em;
+			font-size: 16px;
 			vertical-align: middle;
 		}
 
