--- a/npm/jishupang-webpack-demo/src/index.html
+++ b/npm/jishupang-webpack-demo/src/index.html
@@ -7,6 +7,8 @@
 	<title>Document</title>
 </head>
 <body>
+	<div id="json"></div>
+	<div id="sass"></div>
 	<div id="less"></div>
 	<div>
 		<img src="./images/u=523443511,54588163&fm=11&gp=0.jpg" alt="">
